@@ -10,7 +10,6 @@ import com.openggf.bench.SectionTiming;
 import com.openggf.bench.SteadyStateDetector;
 import com.openggf.bench.TrajectoryDigest;
 import com.openggf.camera.Camera;
-import com.openggf.data.RomManager;
 import com.openggf.debug.PerformanceProfiler;
 import com.openggf.debug.playback.Bk2Movie;
 import com.openggf.debug.playback.Bk2MovieLoader;
@@ -29,7 +28,6 @@ import com.openggf.trace.catalog.TraceEntry;
 import com.openggf.trace.replay.TraceReplaySessionBootstrap;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
@@ -115,8 +113,8 @@ public final class TraceBenchmarkTool {
                     case "--warmup-frames" -> warmupFrames = parseCount(argv, ++i, arg, 0);
                     case "--measure-frames" -> measureFrames = parseCount(argv, ++i, arg, 1);
                     case "--iterations" -> iterations = parseCount(argv, ++i, arg, 1);
-                    case "--json" -> json = Paths.get(CliArguments.requireValue(argv, ++i, arg));
-                    case "--markdown" -> markdown = Paths.get(CliArguments.requireValue(argv, ++i, arg));
+                    case "--json" -> json = Path.of(CliArguments.requireValue(argv, ++i, arg));
+                    case "--markdown" -> markdown = Path.of(CliArguments.requireValue(argv, ++i, arg));
                     case "--label" -> label = CliArguments.requireValue(argv, ++i, arg);
                     case "--track-allocations" -> trackAllocations = true;
                     case "--no-audio" -> audio = false;
@@ -189,8 +187,9 @@ public final class TraceBenchmarkTool {
         warnAboutSuspectFlags(environment);
 
         TraceReplaySessionBootstrap.prepareConfiguration(trace, meta);
+        Path romPath = TraceToolRomLocations.resolve(
+                entry.gameId(), GameServices.configuration(), Path.of(""));
         HeadlessGameBoot boot = new HeadlessGameBoot(SCREEN_WIDTH, SCREEN_HEIGHT);
-        Path romPath = Paths.get(RomManager.resolveRomForGame(entry.gameId()));
         HardwareReadinessAdmissionPolicy admissionPolicy =
                 admissionPolicyFor(meta);
         boot.boot(romPath, entry.zone(), entry.act(), admissionPolicy);
