@@ -13,7 +13,6 @@ import com.openggf.capture.FfmpegEncoder;
 import com.openggf.capture.GlReadPixelsGrabber;
 import com.openggf.configuration.SonicConfiguration;
 import com.openggf.configuration.SonicConfigurationService;
-import com.openggf.data.RomManager;
 import com.openggf.debug.playback.Bk2Movie;
 import com.openggf.debug.playback.Bk2MovieLoader;
 import com.openggf.game.GameServices;
@@ -30,7 +29,6 @@ import com.openggf.trace.replay.TraceReplaySessionBootstrap;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
@@ -115,7 +113,7 @@ public final class TraceCaptureTool {
             if (trace == null || trace.isBlank()) {
                 throw new IllegalArgumentException("--trace <id|name|dir> is required");
             }
-            return new Args(trace, Paths.get(outDir), scale, fps, codec, showGhosts,
+            return new Args(trace, Path.of(outDir), scale, fps, codec, showGhosts,
                     verifyFrames, clip, tailFrames);
         }
 
@@ -193,11 +191,12 @@ public final class TraceCaptureTool {
         TraceReplaySessionBootstrap.prepareConfiguration(trace, meta);
 
         // --- boot headless gameplay session -------------------------------
+        Path romPath = TraceToolRomLocations.resolve(
+                entry.gameId(), GameServices.configuration(), Path.of(""));
         HeadlessGameBoot boot = new HeadlessGameBoot(SCREEN_WIDTH, SCREEN_HEIGHT);
         try (BootOwnership<HeadlessGameBoot> ownership =
                 new BootOwnership<>(
                         boot, SessionManager::closeGameplaySession)) {
-        Path romPath = Paths.get(RomManager.resolveRomForGame(entry.gameId()));
         GameLoop loop = boot.boot(
                 romPath,
                 entry.zone(),
@@ -663,7 +662,7 @@ public final class TraceCaptureTool {
      * run's individual segments (each an ordinary trace) instead.
      */
     static TraceEntry resolveTrace(String spec) {
-        Path catalogDir = Paths.get(GameServices.configuration()
+        Path catalogDir = Path.of(GameServices.configuration()
                 .getString(SonicConfiguration.TRACE_CATALOG_DIR));
         List<TraceEntry> entries = TraceCatalog.scan(catalogDir);
 
@@ -685,7 +684,7 @@ public final class TraceCaptureTool {
         }
 
         // as a direct filesystem path to a trace dir
-        Path asPath = Paths.get(spec);
+        Path asPath = Path.of(spec);
         for (TraceEntry e : TraceCatalog.scan(asPath.getParent() != null
                 ? asPath.getParent() : asPath)) {
             if (e.dir().equals(asPath) || e.dir().toAbsolutePath().equals(asPath.toAbsolutePath())) {
